# orchestrator-framework

./: LICENSE  README.md  package.json  pyproject.toml  run.py
app/: package-lock.json  package.json
core/config/: company.template.yaml  eval-baseline.template.yaml  notifications.yaml
core/scripts/: budget_tracker.py  (+1 more)
docs/: compendium.md  index.md  pitch-deck.html
engines/: adaptive_rubric.py  agent_display.html  api_executor.py  approval_gates.py  artifact_schemas.py  audit_logger.py  auth.py  autodiag_runner.py  chain_executor.py  checkpoint_interrupt.py  company.yaml  composite_memory_scoring.py  context_injector.py  create_batch_tasks.py  dashboard.html  db.py  dispatch_engine.py  error_handlers.py  eval_suite.py  evolution_runner.py  executor.py  export_outputs.py  filelock.py  filter_pipeline.py  generate_dashboard.py  guardrails.py  hierarchical_process.py  install_service.py  license_manager.py  lifecycle_hooks.py  llm_evaluators.py  llm_judge.py  memory_blocks.py  model_router.py  output_guardrails.py  predictor.py  process_manager.py  quality_scorer.py  reactive_subscriptions.py  replanner.py  (+16 more)
landing/: index.html  qualificacao.html
presets/: agency.yaml  freelancer.yaml  saas.yaml  studio.yaml
runtime-migrations/: 001_initial_schema.sql
runtime-src/: config.py  database.py  main.py  models.py
runtime-tests/: conftest.py  test_budget.py  test_dashboard.py  test_evolution.py  test_health.py  test_hooks.py  test_tasks.py  test_weights.py
tests/: conftest.py  test_db.py  test_engines.py
web/: SETUP.md  index.html  package.json  vercel.json
(+65 files in other folders)
